created button, and edited productcardfull that exists in best-selling-jb will try to merge to the best-selling-jb branch

--- a/src/components/BestSelling/ProductCardFull.module.css
+++ b/src/components/BestSelling/ProductCardFull.module.css
@@ -3,10 +3,26 @@
 	/* background-color: red; */
 }
 
+.imagewrapper {
+	position: relative;
+}
+
 .productimage {
 	width: 250px;
 	height: 350px;
 	object-fit: contain;
+}
+
+.addtocart {
+	width: fit-content;
+	cursor: pointer;
+	position: absolute;
+	bottom: 20px;
+	margin: 0 auto;
+	left: 0;
+	right: 0;
+	display: flex;
+	justify-content: center;
 }
 
 .productdetails {
