--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,5 +1,9 @@
 .Layout {
-  height: 100vh;
-  max-width: 1110px;
+  width: 100%;
+}
+
+.container {
+  width: 1110px;
   margin: 0 auto;
+  position: relative;
 }
