--- a/src/components/BestSelling/ProductCardFull.module.css
+++ b/src/components/BestSelling/ProductCardFull.module.css
@@ -3,6 +3,11 @@
 	/* background-color: red; */
 }
 
+.container:hover .addtocart{
+	opacity: 1;
+	bottom: 20px;
+}
+
 .imagewrapper {
 	position: relative;
 }
@@ -14,10 +19,11 @@
 }
 
 .addtocart {
+	opacity: 0;
 	width: fit-content;
 	cursor: pointer;
 	position: absolute;
-	bottom: 20px;
+	bottom: 10px;
 	margin: 0 auto;
 	left: 0;
 	right: 0;
