--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -5,8 +5,17 @@
 	position: fixed;
 	top: 0;
 	right: 0;
-	width: 350px;
+	width: 420px;
 	height: 100%;
+	padding: 0px 15px;
 	z-index: 3;
-	background-color: red;
+	background-color: wheat;
+	display: flex;
+	flex-direction: column;
+}
+
+.header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
