--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -9,7 +9,7 @@
 	height: 100%;
 	padding: 0px 15px;
 	z-index: 3;
-	background-color: wheat;
+	background-color: white;
 	display: flex;
 	flex-direction: column;
 }
