--- a/src/components/BestSelling/ProductCard/ProductCard.module.css
+++ b/src/components/BestSelling/ProductCard/ProductCard.module.css
@@ -41,3 +41,13 @@
 .sizeTxt {
   font-size: 0.6rem;
 }
+
+.addToCartBtn {
+  opacity: 0;
+  transition: all 0.3s;
+}
+
+.addToCartBtn:hover {
+  opacity: 1;
+  transition: all 0.3s;
+}
