--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -9,3 +9,15 @@
   font-weight: 600;
 }
 
+.closeBtn svg{
+  cursor: pointer;
+  width: 50px;
+  height: 20px;
+  transform: translateY(5px);
+}
+
+.df {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
