--- a/src/components/Cart/CartProductCard/CartProductCard.module.css
+++ b/src/components/Cart/CartProductCard/CartProductCard.module.css
@@ -8,8 +8,20 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+  width: 100%;
 }
 
+.df {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.binIcon {
+  width: 40px;
+  height: 20px;
+}
 
 .pdctImg {
   width: 80px;
