--- a/src/components/Cart/CartProductCard/CartProductCard.module.css
+++ b/src/components/Cart/CartProductCard/CartProductCard.module.css
@@ -15,10 +15,17 @@
 }
 
 .detailswrapper {
+	width: 100%;
 	padding: 0 10px;
 	display: flex;
 	flex-direction: column;
 	gap: 5px;
+}
+
+.producttitlewrapper {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 
 .producttitle {
