--- a/src/components/BestSelling/BestSelling.module.css
+++ b/src/components/BestSelling/BestSelling.module.css
@@ -1,6 +1,7 @@
 .container {
-  width: 100%;
-  margin-top: 20px;
+  width: 1110px;
+  margin: 0 auto;
+  margin-top: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -14,7 +15,7 @@
 
 .viewLink {
   font-weight: 600;
-  color: rgba(255,149,5,0.1);
+  color: rgba(255, 149, 5, 0.1);
 }
 
 .carouselContainer {
@@ -23,11 +24,19 @@
   width: 100%;
 }
 
+@keyframes slideIn {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(100%);
+  }
+}
+
 .carousel {
   display: flex;
   margin-top: 10px;
-  gap: 30px;
-  
+  gap: 31px;
 }
 
 .productDetails {
