--- a/src/components/Carousel/Carousel.module.css
+++ b/src/components/Carousel/Carousel.module.css
@@ -1,6 +1,8 @@
 .container {
-  width: 100%;
-  height: 600px;
+  max-width: 1600px;
+  display: flex;
+  justify-content: center;
+  margin: 50px auto;
   overflow: hidden;
   position: relative;
 }
@@ -10,24 +12,25 @@
 }
 
 .carouselImg {
-  width: 1110px;
+  width: 100%;
 }
 
 .leftBtn {
+  background: none;
+  border: none;
+  opacity: 0.7;
   position: absolute;
   z-index: 1;
-  width: 40px;
-  height: 40px;
-  background-color: red;
-  top: 45%;
+  bottom: 20px;
+  left: 40%;
 }
 
 .rightBtn {
+  background: none;
+  border: none;
+  opacity: 0.7;
   position: absolute;
   z-index: 1;
-  width: 40px;
-  height: 40px;
-  background-color: red;
-  top: 45%;
-  right: 0;
+  bottom: 20px;
+  right: 40%;
 }
