--- a/src/components/Cart/CartProductCard/CartProductCard.module.css
+++ b/src/components/Cart/CartProductCard/CartProductCard.module.css
@@ -1,5 +1,6 @@
 .container {
   display: flex;
+  margin-bottom: 25px;
   gap: 30px;
 }
 
@@ -7,8 +8,13 @@
   font-size: 0.9rem;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   gap: 10px;
   width: 100%;
+}
+
+.pdctTitle {
+  width: 150px;
 }
 
 .df {
@@ -18,36 +24,35 @@
   align-items: center;
 }
 
-.binIcon {
-  width: 40px;
-  height: 20px;
-}
-
 .pdctImg {
   width: 80px;
   height: 110px;
+}
+
+.binIcon {
+  cursor: pointer;
 }
 
 .itemsQuantity {
   width: fit-content;
   display: flex;
   border: 1px solid black;
-  
 }
 
-.decreaseQtty, 
+.decreaseQtty,
 .increaseQtty {
   width: 40px;
   border: none;
   background-color: white;
+  cursor: pointer;
 }
 
 .input {
- width: 40px;
- height: 40px;
- border: none;
- text-align: center;
- outline: none;
+  width: 40px;
+  height: 40px;
+  border: none;
+  text-align: center;
+  outline: none;
 }
 
 .input::-webkit-outer-spin-button,
