--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,8 @@ html {
   width: 100%;
   height: 100%;
 }
+
+/* prevent scrollbar from shifting the webpage when backdrop is unmounted*/
+body {
+  padding-left: calc(100vw - 100%);
+}
